--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,10 @@ layout: layout
 {% include post.html %}
 
 <!-- Utterances 댓글 스니핏 삽입 -->
-<script src="https://utteranc.es/client.js"
+<!-- <script src="https://utteranc.es/client.js"
         repo="seokhee516/seokhee516.github.io"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
         async>
-</script>
+</script> -->
